# phil_tg_pars

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: docker_publish
tg_pars/: __main__.py
tg_pars/src/: MessageHandlers.py  fetch_all_chats.py
tg_pars/src/setup/: EnvValidation.py  LoggingSetup.py  UserClient.py
